<resources>
    <string name="app_name">Monumental Habits</string>
    <string name="welcome">Welcome To\n Monumental Habits</string>
    <string name="intro">We can <font color="#FEA800">help you</font> to be a better\n version of <font color="#FEA800">yourself.</font></string>
    <string name="intro2_title">Create New\n Habit Easily</string>
    <string name="intro3_title">Keep Track Of Your\n Progress</string>
    <string name="intro4_title">Join A Supportive\n Community</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="homepage">Homepage</string>
    <string name="courses">Courses</string>
    <string name="community">Community</string>
    <string name="settings">Settings</string>
    <string name="habits">Habits</string>
    <string name="new_habit">New Habit</string>
    <string name="enter_habit_name">Enter habit name</string>
    <string name="habit_frequency">Habit Frequency</string>
    <string name="sunday">SUN</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="contribution_color">Contribution Color</string>
    <string name="reminder">Reminder</string>
    <string name="notification">Notification</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="selected">selected</string>
    <string name="unselected">unselected</string>
    <string name="repeat_everyday">Repeat everyday</string>
    <string name="repeat">Repeat</string>
    <string name="longest_streak">Longest Streak</string>
    <string name="current_streak">Current Streak</string>
    <string name="completion_rate">Completion Rate</string>
    <string name="habit_finished_count">Habit Finished</string>
    <string name="mark_habit_as_complete">Mark Habit as Complete</string>
    <string name="mark_habit_as_missed">Mark Habit as Missed</string>
    <string name="not_include_today">This habit doesn\'t include today</string>
    <string name="not_completed">This habit hasn\'t completed</string>
    <string name="general_settings">General</string>
    <string name="notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="customize_notifications">Customize notifications</string>
    <string name="more_customization">More customization</string>
    <string name="customize_more">Customize it more to fit your usage</string>
    <string name="support">Support</string>
    <string name="contact">Contact</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="notification_message">Hey! It\'s time to </string>
    <string name="channel_name">Reminder Notification</string>
    <string name="channel_description">Remind you at the exact time of habits.</string>
    <string name="today">Today</string>
</resources>